--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -30,6 +33,65 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        dataBinding = true
+    }
+
+    /**
+     * Adding product flavors - this is useful for different entities with same codebase app
+     */
+    flavorDimensions "environment", "region"
+
+    productFlavors {
+
+        europe {
+            dimension 'region'
+            addManifestPlaceholders([APP_NAME:"Sample app europe"])
+            addManifestPlaceholders([APP_ICON:"@mipmap/ic_launcher"])
+            applicationId 'com.europe.sample.app'
+            versionCode 1
+            versionName "1.0"
+        }
+
+        asia {
+            dimension 'region'
+            addManifestPlaceholders([APP_NAME:"Sample app asia"])
+            addManifestPlaceholders([APP_ICON:"@mipmap/ic_launcher"])
+            applicationId 'com.asia.sample.app'
+            versionCode 1
+            versionName "1.0"
+        }
+
+        dev {
+            dimension 'environment'
+        }
+
+        prod {
+            dimension 'environment'
+        }
+    }
+
+    sourceSets {
+        dev {
+            assets.srcDirs = ['src/main/assets']
+        }
+
+        prod {
+            assets.srcDirs = ['src/main/assets']
+        }
+    }
+
+    String [] excludeVariants = [
+            'devEuropeRelease', 'devAsiaRelease'
+    ]
+
+    android.variantFilter{
+        variant ->
+            excludeVariants.each {
+                if (variant.getName().contains(it))
+                    variant.setIgnore(true)
+            }
+    }
 }
 
 dependencies {
@@ -42,6 +104,18 @@ dependencies {
 
     //mobile design library
     implementation project(path: ':mobile-design-library')
+    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+
+    //hilt for dependency injection
+    implementation 'androidx.fragment:fragment-ktx:1.3.2'
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-beta01'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
