--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,5 +145,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
 
     implementation 'androidx.work:work-runtime:2.5.0'
+    implementation "androidx.security:security-crypto:1.1.0-alpha03"
 
 }
