--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,7 +122,6 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0-alpha05'
 
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     kapt 'androidx.hilt:hilt-compiler:1.0.0-beta01'
@@ -145,6 +144,8 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:core:1.4.0-alpha05'
+    androidTestImplementation 'androidx.test:rules:1.4.0-alpha05'
 
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.10'
     implementation 'com.google.android.material:material:1.3.0'
